--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.12",
   "description": "InfluxDB Advanced Analytics Helper for Hexabot",
   "scripts": {
-    "release": "npm version patch && git push origin --tags && npm publish"
+    "release:patch": "npm version patch && git push origin main --tags",
+    "release:minor": "npm version minor && git push origin main --tags"
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.21.0"
