--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "release:patch": "npm version patch && git push origin main --tags",
     "release:minor": "npm version minor && git push origin main --tags"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@influxdata/influxdb-client": "^1.21.0"
   },
   "author": "Hexastack",
